# dpservice-xdp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-06-16-xdp-dpservice-foundation.md  2026-06-17-m1-generalize-datapath.md  2026-06-17-m10-neighbor-nat.md  2026-06-17-m12-rate-metering.md  2026-06-17-m13-ha-pinned-maps.md  2026-06-17-m15-ipv6-overlay.md  2026-06-17-m2-vip.md  2026-06-17-m3-lb-maglev.md  2026-06-17-m4-nat-gw.md  2026-06-17-m5-unified-conntrack.md  2026-06-17-m6-firewall.md  2026-06-17-m7-multi-vni.md  2026-06-17-m8-lpm-routing.md  2026-06-17-m9-remote-lb-backends.md  2026-06-18-ioiab-2a-dynamic-taps.md  2026-06-18-ioiab-2b-dhcp.md  2026-06-19-guest-tx-dhcp-tail-call.md  2026-06-19-ioiab-xdp-dropin.md  2026-06-22-tc-bpf-guest-edge-phase1.md  2026-06-22-tc-bpf-guest-edge-phase2.md  2026-06-22-tc-bpf-guest-edge-phase3.5.md  2026-06-22-tc-bpf-guest-edge-phase3.md  2026-06-22-tc-bpf-guest-edge-phase4.md
docs/superpowers/specs/: 2026-06-15-xdp-dpservice-design.md  2026-06-17-datapath-feature-parity-design.md  2026-06-17-full-parity-gap-design.md  2026-06-17-ioiab-dropin-design.md  2026-06-18-ioiab-2a-dynamic-taps-design.md  2026-06-18-ioiab-2b-dhcp-design.md  2026-06-19-guest-tx-tail-call-split-design.md  2026-06-19-ioiab-xdp-dropin-design.md  2026-06-22-tc-bpf-guest-edge-design.md
env/: ha-smoke.sh  justfile  netns-e2e.sh  tap-dhcp-probe.py  tap-dhcp-probe.sh  tap-vm-smoke.sh
test/: ha-smoke.sh  netns-e2e.sh  tap-dhcp-probe.py  tap-dhcp-probe.sh  tap-vm-smoke.sh  tc-dhcp-netns.sh  tc-egress-netns.sh
test/conformance/: DPSERVICE_ERROR_CODES.txt  VENDORED.md  config.py  conftest.py  dp_service.py  fetch-cli.sh  grpc_client.py  helpers.py  run.sh  setup-net.sh
xdp-dp/: Cargo.toml  build.rs
xdp-dp-common/: Cargo.toml
xdp-dp-common/src/: lib.rs
xdp-dp-ebpf/: Cargo.toml  build.rs
xdp-dp-ebpf/src/: arp_nd.rs  conntrack.rs  csum.rs  dbg.rs  dhcp.rs  egress.rs  encap.rs  firewall.rs  ingress.rs  inspect.rs  lb.rs  lib.rs  main.rs  maps.rs  meter.rs  nat.rs  nat64.rs  parse.rs  tc.rs  v6.rs  verdict.rs  vip.rs
xdp-dp/src/: conntrack_gc.rs  control.rs  grpc.rs  loader.rs  maglev.rs  main.rs  maps.rs  state.rs
