[workspace]
resolver = "2"
members = ["xdp-dp-common", "xdp-dp-ebpf", "xdp-dp"]
default-members = ["xdp-dp-common", "xdp-dp"]

[profile.release.package.xdp-dp-ebpf]
debug = 2
codegen-units = 1
strip = false

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
aya = "0.13"
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
network-types = "0.0.7"
