[package]
name = "xdp-dp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
xdp-dp-common = { path = "../xdp-dp-common", features = ["user"] }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]
anyhow = { workspace = true }
aya-build = "0.1.3"
cargo_metadata = "0.23"
xdp-dp-ebpf = { path = "../xdp-dp-ebpf" }
tonic-build = "0.12"
