[package]
name = "xdp-dp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
xdp-dp-common = { path = "../xdp-dp-common", features = ["user"] }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tonic-health = "0.12"
prost = { workspace = true }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
env_logger = "0.11"

[features]
# Build a debug image: compiles the eBPF crate with its `debug` feature (dlog!/aya-log) via
# build.rs. At runtime, set XDP_DP_DEBUG=1 so the loader installs the EbpfLogger drain; without
# that env the EbpfLogger is not started (the AYA_LOGS map is also absent in non-debug images).
debug = []

[build-dependencies]
anyhow = { workspace = true }
aya-build = "0.1.3"
cargo_metadata = "0.23"
xdp-dp-ebpf = { path = "../xdp-dp-ebpf" }
tonic-build = "0.12"
